--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "aos": "^2.3.4",
     "lottie-react": "^2.3.1",
     "next": "13.0.1",
     "react": "18.2.0",
